<resources>
    <string name="app_name">Practice</string>
    <string name="main_desc">
        회원님의 소중한 정보 보호를 위해, 카카오계정의 현재 비밀번호를 확인해 주세요.
    </string>
    <string name="password">비밀번호가 기억나지 않으세요?</string>
    <string name="user_email">test@gmail.com</string>
    <string name="password_hint">비밀번호</string>
    <string name="confirm_hint">확인</string>
    <string name="start_button">Start</string>
    <string name="stop_button">Stop</string>
    <string name="reset_button">Reset</string>
</resources>